Correct position of language elements on mobile menu

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -38,9 +38,11 @@
     }
   }
 
-  ul.nav li.lang-item:last-of-type {
-    position: absolute;
-    right: 1rem;
+  @screen md {
+    ul.nav li.lang-item:last-of-type {
+      position: absolute;
+      right: 1rem;
+    }
   }
 }
 
